screenOrientation written as content instead of attribute by mistake

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -160,8 +160,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="DateTimeSettingsSetupWizard" android:label="@string/date_and_time">
-            android:screenOrientation="portrait"
+        <activity android:name="DateTimeSettingsSetupWizard" android:label="@string/date_and_time"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
