--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -206,6 +206,15 @@
                 <category android:name="android.intent.category.VOICE_LAUNCH" />
             </intent-filter>
         </activity>
+
+        <activity android:name="KeyboardPicker" android:label="@string/keyboard_layout_title">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.settings.LOCALE_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.VOICE_LAUNCH" />
+            </intent-filter>
+        </activity>
         
         <activity android:name="LocalePickerInSetupWizard" android:label="@string/language_picker_title">
             <intent-filter>
