--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -355,6 +355,16 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="AdvancedSettings" android:label="@string/advanced_settings"
+                >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.settings.DEVICE_INFO_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.VOICE_LAUNCH" />
+            </intent-filter>
+        </activity>
+
         <activity android:name="DeviceInfoSettings" android:label="@string/device_info_settings"
                 >
             <intent-filter>
